trunk/Archive/87eaf62b7bd8fb9a5f8f620f397bb6bd-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:22:1: error: static assertion failed: B is a private base of A
 static_assert(is_base_of<A,B>(), "B is a private base of A");
 ^
main.cpp:23:1: error: static assertion failed: C is a virtual base of A
 static_assert(is_base_of<A,C>(), "C is a virtual base of A");
 ^
